# TCC

backend/app/: .gitignore  alembic.ini  campeonato.db  corrigir_gols.py  database.py  firebase-adminsdk.json  firebase_config.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 20bef6b5cc5d_adiciona_jogo_finalizado_em_jogos_e_.py  218eff0fe59f_criação_inicial_das_tabelas.py  3425a8bbbcec_adicionar_coluna_imagem_em_times_e_.py  48e0342aacb1_baseline_inicial.py  4a52526ea357_teste.py  6f234e8367a6_adicionando_naturalidade_jogadores.py  98d2a1f9816d_teste.py  9e9569504531_adicionando_tabela_gols.py  a18310fe4f32_corrige_inconsistências_de_índices.py  ab5632d7828b_corrige_colunas_duplicadas.py  b59adf35a3f8_removendo_campo_naturalidade.py  b610326f4661_adicionando_tabela_jogos.py  c7311826e7d5_removendo_campo_naturalidade.py  d6ca3bfc7509_adiciona_campo_sigla_na_tabela_times.py
backend/app/rotas/: jogadores.py  jogos.py  times.py  upload.py
backend/app/tests/: test_jogador.py
