[tool.poetry]
name = "tcc-backend"
version = "0.1.0"
description = ""
authors = ["Tremendim <luisfernandobeloti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.37"
pydantic = "^2.10.5"
alembic = "^1.14.0"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
